--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@supabase/supabase-js": "^2.57.4",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "supabase": "^2.40.7"
+    "supabase": "^2.40.7",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
