--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
     "bcryptjs": "^3.0.2",
+    "framer-motion": "^12.23.19",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
