--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "framer-motion": "^12.23.19",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "supabase": "^2.40.7",
     "utils": "^0.3.1"
   },
